--- a/index_formulario.html
+++ b/index_formulario.html
@@ -10,7 +10,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/navbarYFooterStyle.css">
   <!-- Estilos css de la pagina-->
-  <link rel="stylesheet" href="./assets/styles/contacto.css">
+  <link rel="stylesheet" href="./assets/styles/styles_formulario.css">
 
 
 
